# cran-deployer

./: .gitignore  .travis.yml  README.md  TODO.md  cran-deployer  pylint.rc  requirements.txt  setup.cfg  setup.py  tox.ini
cran-deployer/: cran-deployer
cran-deployer/playbooks/: install.yaml  uninstall.yaml
cran-deployer/playbooks/group_vars/: all.yaml
cran-deployer/playbooks/roles/common/tasks/: main.yaml
cran-deployer/playbooks/roles/compute/tasks/: main.yaml
cran-deployer/playbooks/roles/controller/files/: cirros_test.py
cran-deployer/playbooks/roles/controller/templates/: local.conf.j2
cran-deployer/playbooks/roles/uninstall/tasks/: main.yaml
cran_deployer/: config.yaml  deployer.py  log.py
cran_deployer/playbooks/: hosts  post_install.yaml
cran_deployer/playbooks/group_vars/: all.yaml
cran_deployer/playbooks/roles/common/tasks/: main.yaml
cran_deployer/playbooks/roles/common/templates/: interfaces.j2
cran_deployer/playbooks/roles/compute/templates/: local.conf.j2
cran_deployer/playbooks/roles/configure/tasks/: main.yaml
cran_deployer/test/: test_cran_deployer.py
playbooks/: hosts  install.yaml
playbooks/group_vars/: all.yaml
playbooks/roles/ceph/tasks/: main.yaml
playbooks/roles/common/tasks/: main.yaml
playbooks/roles/common/templates/: interfaces.j2
playbooks/roles/compute/tasks/: main.yaml
playbooks/roles/compute/templates/: local.conf.j2
playbooks/roles/configure/tasks/: main.yaml
playbooks/roles/controller/files/: cirros_test.py
playbooks/roles/controller/tasks/: main.yaml  post_install.yaml
(+3 files in other folders)
