[metadata]
name = cran-deployer
summary = An OpenStack deployer for CRAN testbeds
description-file =
    README.md
author = 'Kerim Gokarslan'
author-email = 'kerimgokarslan@gmail.com'
home-page = https://github.com/gokarslan/cran-deployer
version = 0.0.3
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    cran-deployer
